--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-select": "^5.9.0",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
@@ -34,7 +35,6 @@
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "shadcn-ui": "^0.9.4",
-    "tailwinydcss": "^3.4.1",
     "typescript": "^5"
   }
 }
