--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.723.0",
+    "@aws-sdk/util-dynamodb": "^3.731.1",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.469.0",
+    "cookies-next": "^5.1.0",
+    "jose": "^5.9.6",
+    "lucide-react": "^0.473.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -22,6 +31,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "webpack": "^5.97.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
